cabal-version: 1.12

name:           aoc2019
version:        0.1
description:    My Advent of Code 2019 solutions, written in Haskell.
homepage:       https://github.com/githubuser/aoc2019#readme
bug-reports:    https://github.com/githubuser/aoc2019/issues
author:         Sam Coy
maintainer:     Sam Coy
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/aoc2019

library
  exposed-modules:
      Day01
      Util
  other-modules:
      Paths_aoc2019
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable aoc2019-exe
  main-is: Main.hs
  other-modules:
      Paths_aoc2019
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc2019
    , base >=4.7 && <5
  default-language: Haskell2010
